smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-after-namespace.smithy
// Parse error at line 6, column 13 near `\n[EOF]`: Expected a valid identifier character, but found '\n'
$version: "2.0"

namespace smithy.example

use invalid#
